Full remodel of CSS and added a session check function.

--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
     </header>
     <main class="main-content">
       <div class="button-container">
-        <a href="public/teacher.html">
+        <a href="teacher.html">
             <button class="btn generate-btn">Teacher?</button>
         </a>
 
-        <a href="public/teacher.html">
+        <a href="student.html">
             <button class="btn enter-btn">Student?</button>
         </a>
         
