It's all there.

--- a/public/teacher.html
+++ b/public/teacher.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teacher's Page</title>
-    <link rel="stylesheet" href="app.css"> <!-- External stylesheet link -->
+    <title>Teachers: Any Questions?</title>
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
     <div class="container">
         <header class="header">
-            <h1>Teacher's Page</h1>
-            <button id="generate-code" class="btn">Generate Code</button>
+            <h1><span class="red-question">Any Questions</span></h1>
+            <button id="generate-code" class="btn generate-code-btn">Generate Code</button>
             <p id="session-code"></p>
         </header>
 
